--- a/src/components/community/aq-community-home.html
+++ b/src/components/community/aq-community-home.html
@@ -63,7 +63,7 @@
                     <div>
                       <template is="dom-repeat" items="{{items}}">
                           <aq-community-home-post-item
-                            topic-address="#/dashboard/community/topics"
+                            topic-address="#/dashboard/community/topics/{{item._id}}"
                             topic-heading="{{item.title}}"
                             author-name="{{item.user.firstName}}"
                             author-address="{{item.user.email}}"
@@ -78,7 +78,7 @@
                     <div>
                         <template is="dom-repeat" items="{{items}}">
                             <aq-community-home-post-item
-                              topic-address="#/dashboard/community/topics"
+                              topic-address="#/dashboard/community/topics/{{item._id}}"
                               topic-heading="{{item.title}}"
                               author-name="{{item.user.firstName}}"
                               author-address="{{item.user.email}}"
@@ -93,7 +93,7 @@
                     <div>
                       <template is="dom-repeat" items="{{items}}">
                           <aq-community-home-post-item
-                            topic-address="#/dashboard/community/topics"
+                            topic-address="#/dashboard/community/topics/{{item._id}}"
                             topic-heading="{{item.title}}"
                             author-name="{{item.user.firstName}}"
                             author-address="{{item.user.email}}"
@@ -108,7 +108,7 @@
                     <div>
                       <template is="dom-repeat" items="{{items}}">
                           <aq-community-home-post-item
-                            topic-address="#/dashboard/community/topics"
+                            topic-address="#/dashboard/community/topics/{{item._id}}"
                             topic-heading="{{item.title}}"
                             author-name="{{item.user.firstName}}"
                             author-address="{{item.user.email}}"
@@ -123,7 +123,7 @@
                     <div>
                         <template is="dom-repeat" items="{{items}}">
                             <aq-community-home-post-item
-                              topic-address="#/dashboard/community/topics"
+                              topic-address="#/dashboard/community/topics/{{item._id}}"
                               topic-heading="{{item.title}}"
                               author-name="{{item.user.firstName}}"
                               author-address="{{item.user.email}}"
@@ -172,24 +172,16 @@
                 this.header = {
                     "aimsquant-token": user.token,
                     "Content-Type": "application/json"
-                }
-                this.items = [
-                    {
-                        "name": "Bob"
-                    }, {
-                        "name": "Tim"
-                    }, {
-                        "name": "Mike"
-                    }
-                ];
+                };
+                debugger;
             },
-            onActivateTab: function (event, object) {
+            onActivateTab(event, object) {
                 this.getAllPosts(this.selected);
             },
-            getAllPosts: function(item) {
+            getAllPosts(item) {
                 this.$.threads.generateRequest();
             },
-            onAllThreads: function (data) {
+            onAllThreads(data) {
                 this.items = data.detail.response;
             },
             createPost() {
