--- a/src/components/community/aq-community-postdetail-header.html
+++ b/src/components/community/aq-community-postdetail-header.html
@@ -66,13 +66,13 @@
       </div>
 
       <div class="layout horizontal">
-        <span id='category' class="self-top">{{title}}</span>
+        <span id='category' class="self-top">{{category}}</span>
         <div class="flex"></div>
         <paper-icon-button title="Follow" icon="vaadin-icons:megafone"></paper-icon-button>
         <paper-icon-button title="Share" icon="vaadin-icons:share-square"></paper-icon-button>
       </div>
 
-      <aq-community-postdetail-content id='header-content'></aq-community-postdetail-content>
+      <aq-community-postdetail-content item="{{item}}"></aq-community-postdetail-content>
 
     </div>
   </template>
@@ -82,12 +82,16 @@
       is: 'aq-community-postdetail-header',
 
       properties :{
+        item: Object,
         title: String,
         category: String,
         author: String,
         createdAt: String,
         postText:String
-      }
+      },
+      ready: function() {
+          
+      },
     });
 
   </script>
